adjusted image path

--- a/grayScale/index.html
+++ b/grayScale/index.html
@@ -19,27 +19,27 @@
         <ul id="gallery" class="grid">
           <li class="img">
             <a href="https://github.com/jakeliny" target="_blank">
-              <img src="./assets/jakeliny.png" alt="Jakeliny" />
+              <img src="./assets/devs/jakeliny.png" alt="Jakeliny" />
             </a>
           </li>
           <li class="img">
             <a href="https://github.com/diego3g" target="_blank">
-              <img src="./assets/diego.png" alt="Diego" />
+              <img src="./assets/devs/diego.png" alt="Diego" />
             </a>
           </li>
           <li class="img">
             <a href="https://github.com/maykbrito" target="_blank">
-              <img src="./assets/mayk.jpeg" alt="Mayk" />
+              <img src="./assets/devs/mayk.jpeg" alt="Mayk" />
             </a>
           </li>
           <li class="img">
             <a href="https://github.com/rodrigo" target="_blank">
-              <img src="./assets/rodrigo.jpeg" alt="Rodrigo" />
+              <img src="./assets/devs/rodrigo.jpeg" alt="Rodrigo" />
             </a>
           </li>
           <li class="img">
             <a href="https://github.com/birobirobiro" target="_blank">
-              <img src="./assets/birobirobiro.png" alt="biro biro biro" />
+              <img src="./assets/devs/birobirobiro.png" alt="biro biro biro" />
             </a>
           </li>
         </ul>
